--- a/app/views/smartrent/properties/_filters.html.erb
+++ b/app/views/smartrent/properties/_filters.html.erb
@@ -1,6 +1,6 @@
 <div id="contactLeft">
   <div id="search">
-    <%= search_form_for @q, {:class => "property_listing"} do |f|%>
+    <%= search_form_for @q, {:class => "property_listing", :remote => true} do |f|%>
       <div class="searchTitle">
         <h1>Search By</h1>
       </div>
@@ -12,11 +12,11 @@
 
         <ul>
           <li>
-            <%#= f.check_box :studio_true %>
-            <%#= f.label :studio_true, "Studios" %>
+            <%= f.check_box :studio_true %>
+            <%= f.label :studio_true, "Studios" %>
           </li>
           <li>
-            <%#= f.check_box :one_bedroom_true %>
+            <%= f.check_box :floor_plans_beds %>
             <%#= f.label :one_bedroom_true, "1 Bedrooms" %>
           </li>
           <li>
