--- a/app/views/smartrent/admin/rewards/_form.html.erb
+++ b/app/views/smartrent/admin/rewards/_form.html.erb
@@ -34,6 +34,12 @@
       </div>
     </div>
     <div class="form-group">
+      <%= f.label :amount, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :amount, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
       <label class="col-md-2 control-label" for="singlebutton"></label>
       <div class="col-md-4">
         <%= f.submit :class => "btn btn-primary" %>
