--- a/app/views/smartrent/admin/rewards/edit.html.erb
+++ b/app/views/smartrent/admin/rewards/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_resident</h1>
+<h1>Editing Resident</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @admin_resident %> |
-<%= link_to 'Back', admin_residents_path %>
+<%= link_to 'Show', admin_reward_path(@reward) %> |
+<%= link_to 'Back', admin_rewards_path %>
