--- a/app/views/smartrent/admin/rewards/new.html.erb
+++ b/app/views/smartrent/admin/rewards/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Resident</h1>
+<h1>New Reward</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_residents_path %>
+<%= link_to 'Back', admin_rewards_path %>
