--- a/app/views/smartrent/properties/_row.html.erb
+++ b/app/views/smartrent/properties/_row.html.erb
@@ -72,7 +72,7 @@
     </div>
     <div class="info">
       <h3>
-        <%= link_to property_.title, property_path(property_), :target => "_blank" %>
+        <%= link_to property_.title, property_.bozzuto_url, :target => "_blank" %>
       </h3>
 
       <p><%= property_.address %>, <%= property_.city %>, <%= property_.state %><br>
