--- a/app/assets/stylesheets/smartrent/application.css.erb
+++ b/app/assets/stylesheets/smartrent/application.css.erb
@@ -14,5 +14,6 @@
  *= require smartrent/bootstrap
  *= require smartrent/bootstrap-theme
  *= require smartrent/layout
+ *= require prettyphoto-rails
  * require_tree .
  */
