--- a/app/views/smartrent/homes/_featured_home_table.html.erb
+++ b/app/views/smartrent/homes/_featured_home_table.html.erb
@@ -7,7 +7,7 @@
     <td colspan="3">
       <div class="floorPlanImages">
         <% more_home.floor_plan_images.each do |floor_plan_image| %>
-          <%= render partial: "home_floor_plan_row", :locals => {:floor_plan_image => floor_plan_image} %>
+          <%= render partial: "home_floor_plan_row", :locals => {:floor_plan_image => floor_plan_image, :featured => "featured"} %>
         <% end %>
       </div>
     </td>
