--- a/app/views/smartrent/homes/_home_floor_plan_images.html.erb
+++ b/app/views/smartrent/homes/_home_floor_plan_images.html.erb
@@ -1,5 +1,5 @@
 <div class="homeFPImages" id="floor-plan-<%= more_home.id %>">
   <% more_home.floor_plan_images.each do |floor_plan_image| %>
-    <%= render partial: "home_floor_plan_row", :locals => {:floor_plan_image => floor_plan_image} %>
+    <%= render partial: "home_floor_plan_row", :locals => {:floor_plan_image => floor_plan_image, :featured => "not_featured"} %>
   <% end %>
 </div>
