replaced outdated prettyphoto-rails gem, added properties/residents csv file, made this engine work with crm app

--- a/app/assets/stylesheets/smartrent/application.css.erb
+++ b/app/assets/stylesheets/smartrent/application.css.erb
@@ -14,6 +14,6 @@
  *= require smartrent/bootstrap
  *= require smartrent/bootstrap-theme
  *= require smartrent/layout
- *= require prettyphoto-rails
+ *= require smartrent/prettyPhoto
  * require_tree .
  */
