--- a/app/views/smartrent/admin/rewards/show.html.erb
+++ b/app/views/smartrent/admin/rewards/show.html.erb
@@ -7,7 +7,7 @@
       <b>Period End: </b><%= @reward.period_end.to_s(:year_month_day) %><br />
     <% end %>
     <% if @reward.property %>
-      <b>Property: </b><%= @reward.property.title %><br />
+      <b>Property: </b><%= @reward.property.name %><br />
     <% end %>
   </div>
   <br />
