--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -2,28 +2,29 @@
   <% if @property.errors.any? %>
     <%= render partial: "shared/form_errors", :locals => {:errors => @property.errors} %>
   <% end %>
+  <%= f.hidden_field :is_smartrent, :value => true %>
   <fieldset>
     <div class="field">
       <div class="form-group">
-        <%= f.label :title, :class => "col-md-2 control-label" %>
+        <%= f.label :name, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.text_field :title, :class => "form-control input-md" %>
+          <%= f.text_field :name, :class => "form-control input-md" %>
         </div>
       </div>
     </div>
     <div class="field">
       <div class="form-group">
-        <%= f.label :phone_number, :class => "col-md-2 control-label" %>
+        <%= f.label :phone, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.text_field :phone_number, :class => "form-control input-md" %>
+          <%= f.text_field :phone, :class => "form-control input-md" %>
         </div>
       </div>
     </div>
     <div class="field">
       <div class="form-group">
-        <%= f.label :website, :class => "col-md-2 control-label" %>
+        <%= f.label :website_url, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.text_field :website, :class => "form-control input-md" %>
+          <%= f.text_field :website_url, :class => "form-control input-md" %>
         </div>
       </div>
     </div>
@@ -61,9 +62,17 @@
     </div>
     <div class="field">
       <div class="form-group">
-        <%= f.label :address, :class => "col-md-2 control-label" %>
+        <%= f.label :address_line1, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.text_field :address, :class => "form-control input-md" %>
+          <%= f.text_field :address_line1, :class => "form-control input-md" %>
+        </div>
+      </div>
+    </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :address_line2, :class => "col-md-2 control-label" %>
+        <div class="col-md-4">
+          <%= f.text_field :address_line2, :class => "form-control input-md" %>
         </div>
       </div>
     </div>
@@ -86,7 +95,8 @@
     <div class="form-group">
       <%= f.label :status, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.select :status, Smartrent::Property.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
+        <%= f.text_field :status, :class => "form-control input-md" %>
+        <%#= f.select :status, Smartrent::Property.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
       </div>
     </div>
     <div class="field">
