--- a/app/views/smartrent/admin/rewards/index.html.erb
+++ b/app/views/smartrent/admin/rewards/index.html.erb
@@ -19,7 +19,7 @@
     <tr>
       <td><%= reward.resident.email %></td>
       <td><%= number_to_currency reward.amount %></td>
-      <td><%= reward.property.title if reward.property %></td>
+      <td><%= reward.property.name if reward.property %></td>
       <td><%= reward.period_start.to_s(:year_month_day) if reward.period_start %></td>
       <td><%= reward.period_end.to_s(:year_month_day) if reward.period_end %></td>
       <td><%= Smartrent::Reward.types[reward.type_] %></td>
