--- a/app/views/smartrent/properties/_form.html.erb
+++ b/app/views/smartrent/properties/_form.html.erb
@@ -10,14 +10,14 @@
       </ul>
     </div>
   <% end %>
-
+  <%= f.hidden_field :is_smartrent, true %>
   <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :phone_number %><br />
-    <%= f.text_field :phone_number %>
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone %>
   </div>
   <div class="field">
     <%= f.label :detail_url %><br />
@@ -40,16 +40,16 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
+    <%= f.label :address_line1 %><br />
+    <%= f.text_field :address_line1 %>
   </div>
   <div class="field">
-    <%= f.label :lat %><br />
-    <%= f.text_field :lat %>
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
   </div>
   <div class="field">
-    <%= f.label :lng %><br />
-    <%= f.text_field :lng %>
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
   </div>
   <div class="field">
     <%= f.label :one_bedroom %><br />
