--- a/app/views/smartrent/properties/_row.html.erb
+++ b/app/views/smartrent/properties/_row.html.erb
@@ -72,11 +72,11 @@
     </div>
     <div class="info">
       <h3>
-        <%= link_to property_.title, property_.bozzuto_url, :target => "_blank" %>
+        <%= link_to property_.name, property_.bozzuto_url, :target => "_blank" %>
       </h3>
 
-      <p><%= property_.address %>, <%= property_.city %>, <%= property_.state %><br>
-      <%= property_.phone_number %></p>
+      <p><%= property_.address_line1 %>, <%= property_.city %>, <%= property_.state %><br>
+      <%= property_.phone %></p>
 
       <ul class="fp">
         <% if property_.studio %>
