smartrent properties merged

--- a/app/views/smartrent/admin/floor_plans/index.html.erb
+++ b/app/views/smartrent/admin/floor_plans/index.html.erb
@@ -25,7 +25,7 @@
 
 <% @admin_floor_plans.each do |admin_floor_plan| %>
   <tr>
-    <td><%= admin_floor_plan.property.title %></td>
+    <td><%= admin_floor_plan.property.name %></td>
     <td><%= admin_floor_plan.origin_id %></td>
     <td><%= admin_floor_plan.name %></td>
     <td><%= admin_floor_plan.url %></td>
