--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -2,13 +2,28 @@
   <% if @property.errors.any? %>
     <%= render partial: "shared/form_errors", :locals => {:errors => @property.errors} %>
   <% end %>
-  <%= f.hidden_field :is_smartrent, :value => true %>
   <fieldset>
     <div class="field">
       <div class="form-group">
         <%= f.label :name, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
           <%= f.text_field :name, :class => "form-control input-md" %>
+        </div>
+      </div>
+    </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :is_smartrent, :class => "col-md-2 control-label" %>
+        <div class="col-md-4">
+          <%= f.check_box :is_smartrent, :class => "form-control input-md" %>
+        </div>
+      </div>
+    </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :is_crm, :class => "col-md-2 control-label" %>
+        <div class="col-md-4">
+          <%= f.check_box :is_crm, :class => "form-control input-md" %>
         </div>
       </div>
     </div>
