working on use case 1 to restrict property_managers

--- a/app/views/smartrent/admin/properties/show.html.erb
+++ b/app/views/smartrent/admin/properties/show.html.erb
@@ -21,7 +21,7 @@
 
 <p>
   <b>Description:</b>
-  <%= @property.description.html_safe %>
+  <%= @property.description.html_safe if @property.description.present? %>
 </p>
 
 <p>
