--- a/app/views/layouts/smartrent/_admin_header.html.erb
+++ b/app/views/layouts/smartrent/_admin_header.html.erb
@@ -9,28 +9,38 @@
       </button>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-    <% if admin_user_signed_in? %>
+    <% if current_user %>
       <ul class="nav navbar-nav">
-        <li class="<%if @active == "properties"%>active <% end %>dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Properties <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Properties", admin_properties_path %></li>
-            <li><%= link_to "Features", admin_features_path %></li>
-            <li><%= link_to "Import Property Features", import_admin_property_features_path %></li>
-            <li><%= link_to "Floor Plans", admin_floor_plans_path %></li>
-          </ul>
-        </li>
-        <li <%if @active == "homes"%>class="active"<% end %>>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Homes <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Homes", admin_homes_path %></li>
-            <li><%= link_to "More Homes", admin_more_homes_path %></li>
-            <li><%= link_to "Floor Plan Images", admin_floor_plan_images_path %></li>
-          </ul>
-        </li>
-        <li <%if @active == "residents"%>class="active"<% end %>>
-          <%= link_to "Residents", admin_residents_path %>
-        </li>
+        <% if current_user.is_admin? or  current_user.is_property_manager? %>
+          <li class="<%if @active == "properties"%>active <% end %>dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Properties <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <% if current_user.is_admin? or  current_user.is_property_manager? %>
+                <li><%= link_to "Properties", admin_properties_path %></li>
+              <% end %>
+              <% if current_user.is_admin? %>
+                <li><%= link_to "Features", admin_features_path %></li>
+                <li><%= link_to "Import Property Features", import_admin_property_features_path %></li>
+                <li><%= link_to "Floor Plans", admin_floor_plans_path %></li>
+            <% end %>
+            </ul>
+          </li>
+        <% end %>
+        <% if current_user.is_admin? %>
+          <li <%if @active == "homes"%>class="active"<% end %>>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Homes <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Homes", admin_homes_path %></li>
+              <li><%= link_to "More Homes", admin_more_homes_path %></li>
+              <li><%= link_to "Floor Plan Images", admin_floor_plan_images_path %></li>
+            </ul>
+          </li>
+        <% end %>
+        <% if current_user.is_admin? or current_user.is_property_manager? %>
+          <li <%if @active == "residents"%>class="active"<% end %>>
+            <%= link_to "Residents", admin_residents_path %>
+          </li>
+        <% end %>
         <li <%if @active == "rewards"%>class="active"<% end %>>
           <%= link_to "Rewards", admin_rewards_path %>
         </li>
@@ -40,11 +50,13 @@
       </ul>
     <% end %>
       <ul class="nav navbar-nav pull-right">
-      <% if admin_user_signed_in? %>
+      <% if current_user %>
+        <% if current_user.is_admin? %>
         <li<% if @active == "settings" %> class"active"<%end%>><%= link_to "Settings", admin_settings_path %></li>
-        <li><%= link_to "Logout", destroy_admin_user_session_path, :class => "btn btn-danger"  %></li>
+        <% end %>
+        <li><%= link_to "Logout", "/logout", :class => "btn btn-danger"  %></li>
       <% else %>
-        <li><%= link_to "Login", new_session_path(:admin_user), :class => "btn btn-success"  %></li>
+        <li><%= link_to "Login", "/login", :class => "btn btn-success"  %></li>
       <% end %>
         </ul>
     </div>
