--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -11,6 +11,7 @@
         </div>
       </div>
     </div>
+    <% if current_user.has_role? :admin, Property %>
     <div class="field">
       <div class="form-group">
         <%= f.label :is_smartrent, :class => "col-md-2 control-label" %>
@@ -27,6 +28,7 @@
         </div>
       </div>
     </div>
+  <% end %>
     <div class="field">
       <div class="form-group">
         <%= f.label :phone, :class => "col-md-2 control-label" %>
