--- a/app/views/smartrent/admin/residents/_form.html.erb
+++ b/app/views/smartrent/admin/residents/_form.html.erb
@@ -54,27 +54,15 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :house_hold_size, :class => "col-md-2 control-label" %>
+      <%= f.label :property_ids, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.number_field :house_hold_size, :class => "form-control input-md" %>
+        <%= f.collection_select :property_ids, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control input-md", :multiple => true} %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :pets_count, :class => "col-md-2 control-label" %>
+      <%= f.label :home_ids, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.number_field :pets_count, :class => "form-control input-md" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :contract_signing_date, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
-        <%= f.date_select :contract_signing_date, :class => "form-control input-md" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :property_id, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
-        <%= f.collection_select :property_id, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control input-md"} %>
+        <%= f.collection_select :home_ids, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"}, {:class => "form-control input-md", :multiple => true} %>
       </div>
     </div>
     <div class="form-group">
@@ -90,15 +78,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :move_in_date, :class => "col-md-2 control-label" %>
+      <%= f.label :crm_resident_id, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.date_select :move_in_date, :class => "form-control input-md" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= f.label :move_out_date, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
-        <%= f.date_select :move_out_date, :class => "form-control input-md" %>
+        <%= f.collection_select :crm_resident_id, Resident.all, :id, :full_name, {:include_blank => "--Select CRM Resident--"}, {:class => "form-control input-md", :multiple => false} %>
       </div>
     </div>
     <div class="form-group">
