--- a/app/views/smartrent/admin/residents/index.html.erb
+++ b/app/views/smartrent/admin/residents/index.html.erb
@@ -12,7 +12,8 @@
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th>Apartment</th>
+      <th>Unit ID</th>
+      <th>Properties</th>
       <th>Status</th>
       <th>Actions</th>
     </tr>
@@ -21,8 +22,9 @@
     <tr>
       <td><%= resident.name %></td>
       <td><%= resident.email %></td>
-      <td><%= resident.property.name if resident.property %></td>
-      <td><%= resident.status_text %></td>
+      <td><%= resident.unit_id %></td>
+      <td><%= link_to "Properties", properties_admin_resident_path(resident) %></td>
+      <td><%= resident.status %></td>
       <td><%= link_to 'Show', admin_resident_path(resident) %> <% if can? :update, @resident %>| <%= link_to 'Edit', edit_admin_resident_path(resident) %> <% end %> <% if can? :destroy, @resident %> | <%= link_to 'Destroy', admin_resident_path(resident), method: :delete, data: { confirm: 'Are you sure?' } %><% end %></td>
       <%  %>
     </tr>
