--- a/app/views/smartrent/admin/residents/_form.html.erb
+++ b/app/views/smartrent/admin/residents/_form.html.erb
@@ -54,9 +54,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :property_ids, :class => "col-md-2 control-label" %>
+      <%#= f.label :property_ids, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.collection_select :property_ids, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control input-md", :multiple => true} %>
+        <%#= f.collection_select :property_ids, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control input-md", :multiple => true} %>
       </div>
     </div>
     <div class="form-group">
@@ -66,9 +66,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :status, :class => "col-md-2 control-label" %>
+      <%#= f.label :status, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.select :status, Smartrent::Resident.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
+        <%#= f.select :status, Smartrent::Resident.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
       </div>
     </div>
     <div class="form-group">
