--- a/app/views/smartrent/admin/properties/index.html.erb
+++ b/app/views/smartrent/admin/properties/index.html.erb
@@ -5,6 +5,7 @@
 </div>
 <br />
 <br />
+<%= render partial: "filter_form" %>
 <br />
 <% if @properties.present? %>
   <table class="table">
@@ -24,6 +25,8 @@
   <% end %>
   </table>
   <%= will_paginate @properties, renderer: BootstrapPagination::Rails %>
+<% elsif @search == "1" %>
+  <div class="alert alert-warning">No Properties found</div>
 <% else %>
   <div class="alert alert-warning">No Properties have been added yet.</div>
 <% end %>
