--- a/app/views/smartrent/admin/residents/_filter_form.html.erb
+++ b/app/views/smartrent/admin/residents/_filter_form.html.erb
@@ -5,7 +5,7 @@
       <div class="form-group">
         <%= label_tag "", "ID", :class => "col-md-1 control-label" %>
         <div class="col-md-2">
-          <%= text_field_tag :_id, params[:id], :class => "form-control input-md" %>
+          <%= text_field_tag :_id, params[:_id], :class => "form-control input-md" %>
         </div>
       </div>
     </div>
