--- a/app/views/smartrent/admin/residents/index.html.erb
+++ b/app/views/smartrent/admin/residents/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Residents</h1>
 <div class="links pull-right">
-  <%= link_to 'Make all Rewards Initial Reward', move_all_rewards_to_initial_balance_admin_residents_path, :class => "btn btn-primary", data: {confirm: "This action is irreversible and will make all rewards initial reward; Continue?"} %>
+  <%#= link_to 'Make all Rewards Initial Reward', move_all_rewards_to_initial_balance_admin_residents_path, :class => "btn btn-primary", data: {confirm: "This action is irreversible and will make all rewards initial reward; Continue?"} %>
   <%= link_to 'Import Residents', import_admin_residents_path, :class => "btn btn-default" %>
   <%= link_to 'New Resident', new_admin_resident_path, :class => "btn btn-primary" %>
 </div>
