--- a/app/views/smartrent/admin/rewards/index.html.erb
+++ b/app/views/smartrent/admin/rewards/index.html.erb
@@ -32,6 +32,8 @@
   <% end %>
   </table>
   <%= will_paginate @rewards, renderer: BootstrapPagination::Rails %>
+<% elsif @search == "1" %>
+  <div class="alert alert-warning">No Rewards Found</div>
 <% else %>
-  <div class="alert alert-warning">No rewards available</div>
+  <div class="alert alert-warning">No Rewards Available</div>
 <% end %>
