--- a/app/views/smartrent/admin/residents/_form.html.erb
+++ b/app/views/smartrent/admin/residents/_form.html.erb
@@ -60,9 +60,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :home_ids, :class => "col-md-2 control-label" %>
+      <%#= f.label :home_ids, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.collection_select :home_ids, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"}, {:class => "form-control input-md", :multiple => true} %>
+        <%#= f.collection_select :home_ids, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"}, {:class => "form-control input-md", :multiple => true} %>
       </div>
     </div>
     <div class="form-group">
