--- a/app/views/smartrent/admin/resident_properties/_form.html.erb
+++ b/app/views/smartrent/admin/resident_properties/_form.html.erb
@@ -40,9 +40,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :move_out_date, :class => "col-md-2 control-label" %>
+      <%= f.label :move_out_date,{}, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.date_select :move_out_date, :class => "form-control input-md" %>
+        <%= f.date_select :move_out_date, {include_blank: true} %>
       </div>
     </div>
     <div class="form-group">
